German l10n: Use the german word for "web interface" instead of "FProxy".

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -257,8 +257,8 @@ DarknetConnectionsToadlet.fcpDisabled=FCP ist deaktiviert (für Freenet-Clients 
 DarknetConnectionsToadlet.fcpPort=FCP: ${port}/TCP (für Freenet-Clients wie z.B. Frost und Thaw)
 DarknetConnectionsToadlet.fileReference=Wählen Sie hier die Datei aus, die die Referenz enthält:
 DarknetConnectionsToadlet.forceRemove=Entfernen erzwingen
-DarknetConnectionsToadlet.fproxyDisabled=FProxy ist deaktiviert (diese Web-Schnittstelle)
-DarknetConnectionsToadlet.fproxyPort=FProxy: ${port}/TCP (diese Web-Schnittstelle)
+DarknetConnectionsToadlet.fproxyDisabled=FProxy ist deaktiviert (diese Webschnittstelle)
+DarknetConnectionsToadlet.fproxyPort=FProxy: ${port}/TCP (diese Webschnittstelle)
 DarknetConnectionsToadlet.fullTitle=${counts} Freunde (vertrauenswürdige Partner) von ${name}
 DarknetConnectionsToadlet.go=Los
 DarknetConnectionsToadlet.goFriendConnectionStatus=Zur Freunde-Seite gehen um zu sehen, ob dieser Freund sich verbindet
@@ -343,15 +343,15 @@ ExtOldAgeUserAlert.extTooOldShort=Ihre freenet-ext.jar ist nicht mehr aktuell. B
 ExtOldAgeUserAlert.extTooOldTitle=Freenet-ext ist zu alt
 FNPPacketMangler.somePeersDisconnectedStillNotAcked=Wahrscheinlich ein Bug, bitte an die Entwickler melden: Die Verbindung zu ${count}Partnern wurde zwangsweise beendet, da sie Pakete nicht bestätigt haben.
 FNPPacketMangler.somePeersDisconnectedStillNotAckedDetail=${count} ihrer Partner haben ernsthafte Probleme (bestätigen keine Pakete innerhalb von 10 Minuten). Dies ist wahrscheinlich ein Fehler im Code. Bitte informieren sie über unseren Bugsammler auf ${link}https://bugs.freenetproject.org/${/link} oder über die Support-Mailingliste support@freenetproject.org. Bitte schreiben sie in der Nachricht auch, welche Version von Freenet sie laufen haben. Die betroffenen Nachbarknoten (sie sollten sie möglicherweise nicht mitteilen, wenn es Freunde sind) sind:
-FProxyToadlet.abortToHomepage=Abbrechen und zur FProxy-Startseite zurückkehren
+FProxyToadlet.abortToHomepage=Abbrechen und zur Freenet-Startseite zurückkehren
 FProxyToadlet.addFriend=Zu einem Freund verbinden, welcher ebenfalls Freenet benutzt, um die Geschwindigkeit und Ihre Sicherheit zu erhöhen.
 FProxyToadlet.addFriendTitle=Einen Freund hinzufügen
 FProxyToadlet.alerts=Ausführliche Status-Meldungen und Mitteilungen von deinen Freunden
 FProxyToadlet.alertsTitle=Warnungen
-FProxyToadlet.backToFProxy=${link}Klicken Sie hier${/link} um zur FProxy-Startseite zu gehen.
+FProxyToadlet.backToFProxy=${link}Klicken Sie hier${/link} um zur Freenet-Startseite zu gehen.
 FProxyToadlet.backToReferrer=${link}Klicken Sie hier${/link} um zur verweisenden Seite zurückzukehren.
 FProxyToadlet.blocksDetail=Blöcke: ${fetched} / ${required} (insgesamt ${total} fehlgeschlagen ${failed} fatal fehlgeschlagen ${fatallyfailed})
-FProxyToadlet.cantBindPort=FProxy kann diesen Port nicht benutzen!
+FProxyToadlet.cantBindPort=Die Freenet-Webschnittstelle kann diesen Port nicht benutzen!
 FProxyToadlet.categoryBrowsing=Surfen
 FProxyToadlet.categoryChat=Diskutieren
 FProxyToadlet.categoryConfig=Konfiguration
@@ -1157,8 +1157,8 @@ PluginToadlet.failedToLoadPluginCheckClass=Das Plugin (Erweiterung), das Sie ang
 PluginToadlet.failedToLoadPluginTitle=Laden des Plugins fehlgeschlagen
 PluginToadlet.internalNameTitle=Interner Name
 PluginToadlet.loadPluginCommand=Plugin laden
-PluginToadlet.noWebInterface=Das Plugin hat kein Web-Interface (Web-Schnittstelle), deshalb gibt es nichts anzuzeigen.
-PluginToadlet.noWebInterfaceTitle=Plugin hat kein Web-Interface
+PluginToadlet.noWebInterface=Das Plugin hat keine Webschnittstelle, deshalb gibt es nichts anzuzeigen.
+PluginToadlet.noWebInterfaceTitle=Plugin hat keine Webschnittstelle
 PluginToadlet.pluginList=Plugin-Liste
 PluginToadlet.pluginListTitle=Liste der Plugins (Erweiterungen)
 PluginToadlet.pluginNameTitle=Plugin-Name
@@ -1509,14 +1509,14 @@ SimpleHelpToadlet.descriptionText=Diese Seite sollte ihnen einige Basis-Informat
 SimpleHelpToadlet.descriptionTitle=Beschreibung
 SimpleToadletServer.advancedMode=Erweiterten Modus aktivieren?
 SimpleToadletServer.advancedModeLong=Aktiviert die standardmäßige Anzeige von erweiterten Einstellungen und Informationen in der Web-Oberfläche. Diese Einstellung sollte in den meisten Fällen auf "nein" stehen.
-SimpleToadletServer.allowedFullAccess=Hosts die vollen Zugriff auf FProxy haben (Warnung lesen)
-SimpleToadletServer.allowedFullAccessLong=Hosts (Computer) die vollen Zugriff (z.B. Konfiguration ändern, Neustarten usw.) auf den Knoten haben. WARNUNG: Seien Sie vorsichtig wem Sie vollen FProxy-Zugriff geben!
-SimpleToadletServer.allowedHosts=Hostnamen oder IP-Adressen denen es erlaubt ist sich mit FProxy zu verbinden.
+SimpleToadletServer.allowedFullAccess=Hosts die vollen Zugriff auf die Freenet-Webschnittstelle haben (Warnung lesen)
+SimpleToadletServer.allowedFullAccessLong=Hosts (Computer) die vollen Zugriff (z.B. Konfiguration ändern, Neustarten usw.) auf den Knoten haben. WARNUNG: Seien Sie vorsichtig wem Sie vollen Zugriff auf Ihren Knoten geben!
+SimpleToadletServer.allowedHosts=Hostnamen oder IP-Adressen denen es erlaubt ist sich mit der Freenet-Webschnittstelle zu verbinden.
 SimpleToadletServer.allowedHostsLong=Kann eine Komma-getrennte Liste von einzelnen IPs und CIDR-maskierten IPs wie 192.168.0.0/24 sein. Beachten Sie, dass diese, innerhalb der von anderen Optionen gesetzten Grenzen, auf die Festplatte zugreifen können.
 SimpleToadletServer.bindTo=Zu benutzende IP-Adresse
 SimpleToadletServer.bindToLong=Zu benutzende IP-Adresse
-SimpleToadletServer.cannotChangePortOnTheFly=Kann die FProxy-Port-Nummer nicht im laufenden Betrieb ändern
-SimpleToadletServer.couldNotChangeBindTo=Konnte die von FProxy zu benutzende Adresse nicht ändern: ${error}.
+SimpleToadletServer.cannotChangePortOnTheFly=Kann die Port-Nummer der Freenet-Webschnittstelle nicht im laufenden Betrieb ändern
+SimpleToadletServer.couldNotChangeBindTo=Konnte die von der Freenet-Webschnittstelle zu benutzende Adresse nicht ändern: ${error}.
 SimpleToadletServer.cssName=Design der Web-Oberfläche
 SimpleToadletServer.cssNameLong=Wählen Sie ein Design für die Web-Oberfläche aus
 SimpleToadletServer.cssOverride=Das CSS durch eine benutzerdefiniertes ersetzen (WARNUNG!)
@@ -1535,29 +1535,29 @@ SimpleToadletServer.enableHistoryCloaking=Aktiviere Tarnung der History?
 SimpleToadletServer.enableHistoryCloakingLong=Hindert Webseiten daran herauszufinden, welche Freesites Sie besucht haben. Wenn ja, wird das Freenet Web-Interface ein ?secureid= Parameter auf jeder Seite benötigen. Links von Freesites und dem Web-Interace werden diese einbinden. Freenet wird eine Datei mit dem Namen freenet.url.dat generieren, die die Start-URL mit ?secureid= enthält. Schalten Sie dies nur aus, wenn sie niemals denselben Browser für Freenet und für nicht-anonyme Webseiten nutzen.
 SimpleToadletServer.enableInlinePrefetch=Eingebettete Bilder vorladen?
 SimpleToadletServer.enableInlinePrefetchLong=Diese Einstellung könnte helfen, wenn ihr Browser nur wenige Verbindungen zum Knoten zulässt. Es könnte aber auch nicht helfen.
-SimpleToadletServer.enableJS=Benutzung von Javascript durch FProxy aktivieren?
-SimpleToadletServer.enableJSLong=Ob FProxy Javascript-"Helfer" benutzen soll oder nicht. Diese Einstellung sollte in den meisten Fällen auf "nein" gesetzt werden. Beachten Sie, dass Freesites kein Javascript benutzen können, auch wenn dies aktiviert ist.
+SimpleToadletServer.enableJS=Benutzung von Javascript durch die Freenet-Webschnittstelle aktivieren?
+SimpleToadletServer.enableJSLong=Ob die Freenet-Webschnittstelle Javascript-"Helfer" benutzen soll oder nicht. Diese Einstellung sollte in den meisten Fällen auf "nein" gesetzt werden. Beachten Sie, dass Freesites kein Javascript benutzen können, auch wenn dies aktiviert ist.
 SimpleToadletServer.enablePersistentConnections=Aktiviere beständige HTTP-Verbindungen? (Lesen Sie die detailierte Beschreibung)
 SimpleToadletServer.enablePersistentConnectionsLong=Aktivieren Sie dies nicht, es sei denn, ihr Browser wurde konfiguriert, viele gleichzeitige Verbindungen zu nutzen auch wenn diese beständig sind.
-SimpleToadletServer.enableWP=Ermögliche FProxy die Verwendung von "web pushing" (experimentell)?
+SimpleToadletServer.enableWP=Ermögliche der Freenet-Webschnittstelle die Verwendung von "web pushing" (experimentell)?
 SimpleToadletServer.enableWPLong=Soll Freenet Javascript "Web-Pushing" verwenden, um die angezeigten Seiten ohne sie vollständig neu zu laden zu aktualisieren? Sie müssen dafür Javascript in Ihrem Browser aktiviert haben. WARNUNG: Diese Funktion ist experimentell, sie wurde noch nicht genügend von Fehlern bereinigt. Wir garantieren nicht für ihre Sicherheit oder Funktionalität.
-SimpleToadletServer.enabled=FProxy aktivieren?
-SimpleToadletServer.enabledLong=Ob FProxy und verwandte HTTP-Dienste aktiviert werden sollen
-SimpleToadletServer.hasCompletedWizard=Haben Sie den Assistenten schon vollständig ausgeführt?
-SimpleToadletServer.hasCompletedWizardLong=Hast du den Assistenten schon vollständig ausgeführt? Falls nein, wird FProxy deine Anfragen zum Assistenten weiterleiten.
+SimpleToadletServer.enabled=Freenet-Webschnittstelle aktivieren?
+SimpleToadletServer.enabledLong=Ob die Freenet-Webschnittstelle (FProxy) und verwandte HTTP-Dienste aktiviert werden sollen. Die Webschnittstelle ist die Benutzeroberfläche, auf welche Sie über Ihren Browser zugreifen können. WARNUNG: Deaktivieren Sie dies nur, wenn Sie sicher sind, dass Sie nur mit anderen Programmen auf Freenet zugreifen möchten.
+SimpleToadletServer.hasCompletedWizard=Haben Sie den Einstellungs-Assistenten schon vollständig ausgeführt?
+SimpleToadletServer.hasCompletedWizardLong=Haben Sie den Assistent zur erstmaligen Einstellung von Freenet schon vollständig ausgeführt? Falls nein, werden alle Anfragen auf der Webschnittstelle zum Assistenten weiterleiten.
 SimpleToadletServer.illegalCSSName=CSS-Namen dürfen keine Schrägstriche oder Doppelpunkte enthalten!
 SimpleToadletServer.noConfirmPanic=Keine Bestätigung beim Alarm-Knopf
 SimpleToadletServer.noConfirmPanicLong=Wenn diese Option eingeschaltet ist, wird Sie der Alarm-Knopf nicht nach einer Bestätigung fragen, sondern sofort seine Arbeit erledigen.
 SimpleToadletServer.panicButton=Den Alarm-Knopf anzeigen?
 SimpleToadletServer.panicButtonLong=Zeigt einen "Alarm-Knopf" auf der Warteschlangen-Seite an, welcher alle Anfragen ohne Nachfrage entfernt.
-SimpleToadletServer.passthroughMaxSize=Maximale Größe für das transparente Durchreichen in FProxy
-SimpleToadletServer.passthroughMaxSizeLong=Maximale Größe einer Datei für das transparente Durchreichen in FProxy
-SimpleToadletServer.port=FProxy-Port
-SimpleToadletServer.portLong=Der TCP-Port auf dem FProxy Nachrichten empfangen soll
+SimpleToadletServer.passthroughMaxSize=Maximale Größe für das transparente Durchreichen über die Webschnittstelle
+SimpleToadletServer.passthroughMaxSizeLong=Maximale Größe einer Datei für das transparente Durchreichen über die Webschnittstelle. Bei Größeren Dateien werden Sie zuerst gefragt, ob die Datei an den Browser übergeben oder zur Download-Liste hinzugefügt werden soll.
+SimpleToadletServer.port=Port der Webschnittstelle
+SimpleToadletServer.portLong=Der TCP-Port auf dem die Webschnittstelle Nachrichten empfangen soll
 SimpleToadletServer.publicGatewayMode="Öffentlicher Zugangsknoten"-Modus? (Betrifft nur erlaubte Verbindungen, nicht Verbindungen mit erlaubtem Vollzugriff.)
 SimpleToadletServer.publicGatewayModeLong=Soll der "öffentlicher Zugangsknoten"-Modus aktiviert werden? Für IP-Adressen, denen eingeschränkter Zugriff auf den Knoten erlaubt ist (gemäß der Einstellungen), schaltet diese Einstellung die Download-Warteschlange und alles andere, was eventuell als Angriff auf den Knoten missbraucht werden könnte, ab. IP-Adressen, denen Vollzugriff erlaubt ist, haben weiterhin die Erlaubnis, den Knoten zu konfigurieren.
 SimpleToadletServer.ssl=SSL aktivieren?
-SimpleToadletServer.sslLong=SSL auf FProxy aktivieren?
+SimpleToadletServer.sslLong=SSL auf der Webschnittstelle aktivieren?
 StartupToadlet.entropyErrorContent=Auf Ihrem System steht nicht genug Entropie zur Verfügung. Freenet wird erst starten, wenn es genug gesammelt hat. (Maus bewegen, auf der Tastatur tippen, Datei-Operationen, "find / >/dev/null")
 StartupToadlet.entropyErrorTitle=Es ist nicht genug Entropie verfügbar!
 StartupToadlet.isStartingUp=Ihr Knoten startet gerade, bitte warten Sie.
@@ -1809,7 +1809,7 @@ WelcomeToadlet.finInsertedTitle=Einfügen
 WelcomeToadlet.finTitle=Frost-Sofort-Notiz einfügen
 WelcomeToadlet.fromHeader=Von
 WelcomeToadlet.goToExternalLink=Zum angegebenen Link gehen
-WelcomeToadlet.homepageFullTitleWithName=Freenet-FProxy-Startseite von ${name}
+WelcomeToadlet.homepageFullTitleWithName=Freenet Startseite von ${name}
 WelcomeToadlet.ieWarning=Sie scheinen Microsoft Internet Explorer zu benutzen. Das bedeutet, dass manche Seiten im Freenet in der Lage sein könnten Ihre Anonymität zu kompromittieren (gefährden)!
 WelcomeToadlet.ieWarningTitle=Sicherheits-Risiko!
 WelcomeToadlet.insertCount=Einfügen: ${total}
