German l10n: Add improvement from sweetie.

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -1199,7 +1199,7 @@ PproxyToadlet.pluginSourceChoice=Du kannst das Plugin entweder aus dem Freenet h
 PproxyToadlet.pluginSourceFreenet=Lade aus dem Freenet. Dies ist nicht verfolgbar und sicher, könnte aber langsam sein.
 PproxyToadlet.pluginSourceHTTPS=Lade über das Web (HTTPS) von unseren Hauptservern..
 PproxyToadlet.pluginSourceHTTPSWarning=Dies mag etwas schneller sein, ist aber rückverfolgbar und würde nicht klappen, wenn unsere Webseite (HTTPS) blockiert würde. Benutze dies nur, wenn das Herunterladen des Plugins aus dem Freenet mehrmals fehlschlägt!
-PproxyToadlet.pluginSourceHTTPSWarningDarknet=WARNUNG: Dies wird es Angreifern, die Ihre Internetverbindung belauschen, erlauben zu erkennen, dass Sie Freenet benutzen. Zudem wird es nicht funktionieren, falls die Freenet Internetseite durch Ihren Provider oder Ihre Regierung gesperrt ist.
+PproxyToadlet.pluginSourceHTTPSWarningDarknet=WARNUNG: Angreifer, die Ihre Internetverbindung belauschen, können so erkennen, dass Sie Freenet benutzen. Zudem wird es nicht funktionieren, falls die Freenet Internetseite durch Ihren Provider oder Ihre Regierung gesperrt ist.
 PproxyToadlet.pluginStopping=Plugin wird gestoppt
 PproxyToadlet.pluginUnloaded=Plugin entfernt
 PproxyToadlet.pluginUnloadedWithName=Das Plugin ${name} wurde entfernt.
