English l10n: Use "web interface" instead of "FProxy".

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -424,15 +424,15 @@ FirstTimeWizardToadlet.stepMiscTitle=Freenet first time wizard! - Updating and p
 FirstTimeWizardToadlet.tenPercentDisk=(= 10% of free disk space)
 FirstTimeWizardToadlet.fivePercentDisk=(= 5% of free disk space)
 FirstTimeWizardToadlet.backToSecurityLevels=Don't set a password and return to the wizard.
-FProxyToadlet.abortToHomepage=Abort and return to the FProxy home page
+FProxyToadlet.abortToHomepage=Abort and return to the Freenet home page
 FProxyToadlet.addFriendTitle=Add a Friend
 FProxyToadlet.addFriend=Connect to a friend running Freenet to improve your security
 FProxyToadlet.alertsTitle=Messages
 FProxyToadlet.alerts=Detailed status alerts and messages from your Friends
-FProxyToadlet.backToFProxy=${link}Click here${/link} to go to the FProxy home page.
+FProxyToadlet.backToFProxy=${link}Click here${/link} to go to the Freenet home page.
 FProxyToadlet.backToReferrer=${link}Click here${/link} to go back to the referring page.
 FProxyToadlet.blocksDetail=Blocks: ${fetched} / ${required} (total ${total} failed ${failed} fatally failed ${fatallyfailed})
-FProxyToadlet.cantBindPort=Can't bind fproxy on that port!
+FProxyToadlet.cantBindPort=Can't bind the web interface on that port!
 FProxyToadlet.categoryBrowsing=Browsing
 FProxyToadlet.categoryTitleBrowsing=Browse Freenet
 FProxyToadlet.categoryChat=Discussion
@@ -1481,14 +1481,14 @@ SimpleHelpToadlet.descriptionText=This page should provide basic info for you to
 SimpleHelpToadlet.descriptionTitle=Description
 SimpleToadletServer.advancedMode=Enable Advanced Mode?
 SimpleToadletServer.advancedModeLong=Enables display of advanced options and information in the web interface by default. This setting should be turned to false in most cases.
-SimpleToadletServer.allowedFullAccess=Hosts having a full access to FProxy (read warning)
-SimpleToadletServer.allowedFullAccessLong=Hosts granted full access (i.e. change config settings, restart, etc) to your Freenet node. WARNING: Be very careful who you give full fproxy access to!
-SimpleToadletServer.allowedHosts=Hostnames or IP addresses that are allowed to connect to FProxy.
+SimpleToadletServer.allowedFullAccess=Hosts having a full access to the Freenet web interface (read warning)
+SimpleToadletServer.allowedFullAccessLong=Hosts granted full access (i.e. change config settings, restart, etc) to your Freenet node. WARNING: Be very careful who you give full web interface access to!
+SimpleToadletServer.allowedHosts=Hostnames or IP addresses that are allowed to connect to the web interface.
 SimpleToadletServer.allowedHostsLong=May be a comma-separated list of single IPs and CIDR masked IPs like 192.168.0.0/24. Note that these can access the hard disk within the limits set by other config options.
 SimpleToadletServer.bindTo=IP address to bind to
 SimpleToadletServer.bindToLong=IP address to bind to
-SimpleToadletServer.cannotChangePortOnTheFly=Cannot change FProxy port number on the fly
-SimpleToadletServer.couldNotChangeBindTo=Could not change FProxy bind address: ${error}.
+SimpleToadletServer.cannotChangePortOnTheFly=Cannot change web interface port number on the fly
+SimpleToadletServer.couldNotChangeBindTo=Could not change web interface bind address: ${error}.
 SimpleToadletServer.cssName=Web interface theme
 SimpleToadletServer.cssNameLong=Select a theme for the Freenet web interface
 SimpleToadletServer.cssOverride=Override the CSS with a custom one (WARNING!)
@@ -1501,33 +1501,33 @@ SimpleToadletServer.doRobots=Exclude robots via robots.txt?
 SimpleToadletServer.doRobotsLong=Whether to serve a /robots.txt telling google, spiders, wget, etc to go away
 SimpleToadletServer.enableActivelinks=Enable activelinks?
 SimpleToadletServer.enableActivelinksLong=Should the Browse Freenet page show icons for each bookmarked page? The page will load faster if it doesn't show the icons...
-SimpleToadletServer.enableJS=Enable FProxy use of Javascript?
-SimpleToadletServer.enableJSLong=Whether or not FProxy should use Javascript "helpers". This setting should be turned to false in most cases. Note that freesites may not use javascript even if this is enabled.
-SimpleToadletServer.enableWP=Enable FProxy use of web pushing (experimental)?
-SimpleToadletServer.enableWPLong=Whether or not FProxy should use javascript web pushing to update displayed data without reloading. It requires that javascript is turned on. It is experimental and use at your own risk. 
-SimpleToadletServer.enabled=Enable FProxy?
-SimpleToadletServer.enabledLong=Whether to enable FProxy and related HTTP services
+SimpleToadletServer.enableJS=Enable web interface use of Javascript?
+SimpleToadletServer.enableJSLong=Whether or not the web interface should use Javascript "helpers". This setting should be turned to false in most cases. Note that freesites may not use javascript even if this is enabled.
+SimpleToadletServer.enableWP=Enable web interface use of web pushing (experimental)?
+SimpleToadletServer.enableWPLong=Whether or not the web interface should use javascript web pushing to update displayed data without reloading. It requires that javascript is turned on. It is experimental and use at your own risk. 
+SimpleToadletServer.enabled=Enable the web interface (FProxy)?
+SimpleToadletServer.enabledLong=Whether to enable the web interface and related HTTP services. The web interface is the user interface to Freenet which you can access with your browser.
 SimpleToadletServer.enableExtendedMethodHandling=Enable extended HTTP method handling?
 SimpleToadletServer.enableExtendedMethodHandlingLong=Enable this to allow other HTTP methods then GET and POST to be handled. Required for WebDAV and other HTTP extensions.
 SimpleToadletServer.enableInlinePrefetch=Enable prefetching of inline images?
 SimpleToadletServer.enableInlinePrefetchLong=This may help if your browser only uses a small number of connections to talk to Freenet. On the other hand it may not.
 SimpleToadletServer.enablePersistentConnections=Enable persistent HTTP connections? (Read detailed description)
 SimpleToadletServer.enablePersistentConnectionsLong=Don't enable this unless your browser is configured to use lots of connections even if they are persistent.
-SimpleToadletServer.hasCompletedWizard=Have you completed the wizard yet?
-SimpleToadletServer.hasCompletedWizardLong=Have you completed the wizard yet? If not, fproxy will redirect all your requests to it.
+SimpleToadletServer.hasCompletedWizard=Have you completed the first-time configuration wizard yet?
+SimpleToadletServer.hasCompletedWizardLong=Have you completed the first-time configuration wizard yet? If not, the web interface will redirect all your requests to it.
 SimpleToadletServer.illegalCSSName=CSS name must not contain slashes or colons!
 SimpleToadletServer.panicButton=Show the panic button?
 SimpleToadletServer.panicButtonLong=Shows a 'panic button' on the queue page that will remove all downloads and uploads, wipe the cache of recently visited freesites, and clear the master keys file.
 SimpleToadletServer.noConfirmPanic=No confirmation on panic button?
 SimpleToadletServer.noConfirmPanicLong=If true, the panic button will not ask for confirmation but will act immediately.
-SimpleToadletServer.passthroughMaxSize=Maximum size for transparent pass-through in fproxy
-SimpleToadletServer.passthroughMaxSizeLong=Maximum size of a file for transparent pass-through in fproxy
-SimpleToadletServer.port=FProxy port
-SimpleToadletServer.portLong=The TCP port FProxy should listen on
+SimpleToadletServer.passthroughMaxSize=Maximum size for transparent pass-through in the web interface
+SimpleToadletServer.passthroughMaxSizeLong=Maximum size of a file for transparent pass-through in the web interface. For larger files, the web interface will ask you whether it should send the file to your browser or whether Freenet should download it to your downloads directory.
+SimpleToadletServer.port=Web interface port
+SimpleToadletServer.portLong=The TCP port the web interface should listen on
 SimpleToadletServer.publicGatewayMode=Public gateway mode? (Only applies to allowed but non-full-access connections)
 SimpleToadletServer.publicGatewayModeLong=Should we enable public gateway mode? For IPs which are allowed to access Freenet, but are not allowed full access, this option disables the download queue and anything else that might conceivably be abused to attack the Freenet node, while still allowing browsing freesites. IP addresses with full access will be allowed to configure the node.
 SimpleToadletServer.ssl=Enable SSL?
-SimpleToadletServer.sslLong=Enable SSL on FProxy
+SimpleToadletServer.sslLong=Enable SSL on the web interface
 SSL.enable=Activate SSL support?
 SSL.enableLong=Activate SSL support?
 SSL.keyStore=Name and path of key store file
