English l10n: - Change the large title which is shown on the web interface to "Freenet Node of ${nodename}"... This should help users with getting familiar with the term "node". - Get rid of some usages of "node"

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1668,12 +1668,12 @@ Toadlet.cancel=Cancel
 Toadlet.clickHere=Click here
 Toadlet.internalErrorPleaseReport=Internal error: please report
 Toadlet.internalErrorTitle=Internal Error
-Toadlet.nodeHomepage=Node Homepage
+Toadlet.nodeHomepage=Freenet Homepage
 Toadlet.notSupportedTitle=Not Supported
 Toadlet.notSupportedWithClass=Your browser sent a request that Freenet (${class}) could not understand.
 Toadlet.ok=Ok
 Toadlet.permRedirectWithReason=Permanent redirect: ${reason}
-Toadlet.returnToNodeHomepage=Return to node homepage
+Toadlet.returnToNodeHomepage=Return to your Freenet homepage
 Toadlet.returnToQueuepage=Return to queue page
 Toadlet.returnToPrevPage=Return to the previous page
 Toadlet.tempRedirectWithReason=Temporary redirect: ${reason}
@@ -1778,7 +1778,7 @@ WelcomeToadlet.finInsertedTitle=Insertion
 WelcomeToadlet.finTitle=Frost Instant Note insert
 WelcomeToadlet.fromHeader=From
 WelcomeToadlet.goToExternalLink=Go to the specified link
-WelcomeToadlet.homepageFullTitleWithName=Browse Freenet (${name})
+WelcomeToadlet.homepageFullTitleWithName=Freenet Node of ${name}
 WelcomeToadlet.ieWarning=You appear to be using Microsoft Internet Explorer. This means that some sites within Freenet may be able to compromise your anonymity!
 WelcomeToadlet.ieWarningTitle=Security Risk!
 WelcomeToadlet.insertCount=Inserts: ${total}
