German l10n: Change web interface  title to the german version of "Freenet Node of ${nodename}" aswell

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -1809,7 +1809,7 @@ WelcomeToadlet.finInsertedTitle=Einfügen
 WelcomeToadlet.finTitle=Frost-Sofort-Notiz einfügen
 WelcomeToadlet.fromHeader=Von
 WelcomeToadlet.goToExternalLink=Zum angegebenen Link gehen
-WelcomeToadlet.homepageFullTitleWithName=Freenet Startseite von ${name}
+WelcomeToadlet.homepageFullTitleWithName=Freenet Knoten von ${name}
 WelcomeToadlet.ieWarning=Sie scheinen Microsoft Internet Explorer zu benutzen. Das bedeutet, dass manche Seiten im Freenet in der Lage sein könnten Ihre Anonymität zu kompromittieren (gefährden)!
 WelcomeToadlet.ieWarningTitle=Sicherheits-Risiko!
 WelcomeToadlet.insertCount=Einfügen: ${total}
