German l10n: Rename "will never finish" to "pause" priority as happened in the English l10n. Get rid of the "Persistenz" word...

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -1321,7 +1321,7 @@ QueueToadlet.panicButtonConfirmation=Alle Anfragen ohne Bestätigung entfernen!
 QueueToadlet.panicButtonNoConfirmation=Klicken Sie, um alle Down- und Uploads zu entfernen und alle belastenden Daten ohne Bestätigung zu säubern!
 QueueToadlet.panicButtonTitle=Alarm-Knopf
 QueueToadlet.panicButtonWithConfirmation=Klicken Sie, um alle Down- und Uploads zu entfernen und alle belastenden Daten zu säubern.
-QueueToadlet.persistence=Persistenz (Speicher-Dauer)
+QueueToadlet.persistence=Speicher-Dauer
 QueueToadlet.persistenceBroken=Ihr Knoten konnte die Datenbank (node.db4o) in der dauerhafte Downloads und Uploads gespeichert werden nicht laden. Dies wird üblicherweise durch Beschädigung der Daten auf der Festplatte durch z.B. einen Stromausfall verursacht. Die betroffenen Dateien sind ${TEMPDIR} und ${DBFILE}. Bitte schalten Sie den Knoten aus und stellen die Dateien von einem Backup wieder her oder löschen Sie diese. Überprüfen Sie auch, ob eventuell die Festplatte voll ist. Diese Meldung kann unter Umständen auch anzeigt werden, wenn der Knoten gerade herunter fährt - ohne dass eine Beschädigung vorliegt.
 QueueToadlet.persistenceBrokenShortAlert=Die Download- und Upload-Warteschlange ist defekt aufgrund einer Datenbank-Beschädigung. Klicken Sie, um eine Erläuterung zu erhalten, wie dies behoben werden kann.
 QueueToadlet.persistenceBrokenTitle=Die Datenbank der Download- und Upload-Warteschlange ist beschädigt!
@@ -1336,7 +1336,7 @@ QueueToadlet.priority2=hoch
 QueueToadlet.priority3=mittel
 QueueToadlet.priority4=niedrig
 QueueToadlet.priority5=sehr niedrig
-QueueToadlet.priority6=wird niemals fertiggestellt
+QueueToadlet.priority6=Pause
 QueueToadlet.progress=Fortschritt
 QueueToadlet.progressbarAccurate=Dieser Fortschrittswert ist exakt
 QueueToadlet.progressbarNotAccurate=Dieser Fortschritts-Wert verändert sich wahrscheinlich, wenn der Download-Prozess weitere Blöcke findet
