Make Status an enum and apply l10n to the strings.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -177,6 +177,11 @@ ConnectivityToadlet.local=LOCAL
 ConnectivityToadlet.remote=REMOTE
 ConnectivityToadlet.noreply=NO REPLY
 ConnectivityToadlet.summaryTitle=Connectivity
+ConnectivityToadlet.status.DEFINITELY_PORT_FORWARDED=Port forwarded
+ConnectivityToadlet.status.MAYBE_PORT_FORWARDED=Maybe port forwarded
+ConnectivityToadlet.status.MAYBE_NATED=Maybe behind NAT
+ConnectivityToadlet.status.DEFINITELY_NATED=Behind NAT
+ConnectivityToadlet.status.DONT_KNOW=Status unknown
 ConnectionsToadlet.nodeStatus.CONNECTED=CONNECTED
 ConnectionsToadlet.nodeStatus.BACKED OFF=BACKED OFF
 ConnectionsToadlet.nodeStatus.TOO NEW=TOO NEW
