Update the German translation.

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -190,6 +190,11 @@ ConnectivityToadlet.remote=REMOTE
 ConnectivityToadlet.sentReceivedTitle=Gesendete/empfangene Pakete
 ConnectivityToadlet.summaryTitle=Erreichbarkeit aus dem Internet (Überprüfung, ob Dark-/Opennet-Port weitergeleitet werden oder nicht)
 ConnectivityToadlet.title=Erreichbarkeit aus dem Internet für ${nodeName}
+ConnectivityToadlet.status.DEFINITELY_NATED=Befindet sich hinter einer NAT
+ConnectivityToadlet.status.DEFINITELY_PORT_FORWARDED=Port ist definitiv freigegeben
+ConnectivityToadlet.status.DONT_KNOW=Status unbekannt
+ConnectivityToadlet.status.MAYBE_NATED=Befindet sich vielleicht hinter einer NAT
+ConnectivityToadlet.status.MAYBE_PORT_FORWARDED=Port wurde vielleicht freigegeben
 ContentDataFilter.unknownCharset=Die Seite, die Sie ansehen wollen, hat einen unbekannten Zeichensatz. Das heißt, dass wir nicht die Möglichkeit haben, die Seite zu filtern und es kann sein, dass dies Ihre Anonymität gefährdet.
 ContentDataFilter.unknownCharsetTitle=Unbekannter Zeichensatz!
 ContentDataFilter.warningUnknownCharsetTitle=Warnung: Unbekannter Zeichensatz (${charset})
@@ -916,6 +921,8 @@ Node.oneConnectionPerIPLong=Nicht mehr als eine Verbindung pro Adresse erlauben?
 Node.openJDKMightBeVulnerableXML=Bitte aktualisieren Sie Java! Ihr Java könnte verwundbar für mehrere remote code execution exploits sein. Unglücklicherweise ist es für Freenet schwierig herauszufinden, ob das Problem behoben ist oder nicht. Wenn Sie sich nicht sicher sind, lassen Sie bitte Thaw und Freetalk nicht laufen, bis Sie Java aktualisiert haben (Möglicherweise über den Update-Mechanismus von Ihrem Betriebssystem) und starten Sie Freenet und Thaw neu.
 Node.opennetEnabled=Unsicheren Modus einschalten (automatisch mit nicht vertrauenswürdigen Knoten verbinden)?
 Node.opennetEnabledLong=Unsicheren Modus (alias Opennet) einschalten? Wenn dies aktiviert ist, wird der Knoten automatisch Referenzen mit anderen nicht vertrauenswürdigen Knoten (Fremden im Gegensatz zu Freunden) austauschen. Dies bedeutet aber, dass die Tatsache, dass Sie einen Knoten betreiben, nicht länger vertraulich ist und viele Attacken viel einfacher sind. Wenn Sie genügend Leute kennen, die Freenet benutzen, sollten Sie bei vertrauenswürdigen (Freunde) Verbindungen mit ihnen bleiben und dies ausschalten.
+Node.opennetPort=Opennet Portnummer (UDP)
+Node.opennetPortLong=Nummer des UDP Port, welcher von Freenet verwendet wird, um mit fremden Freenet-Knoten (sogenannte Opennet-Knoten) zu kommunizieren.  Diesen Port sollten Sie in Ihrem Router und/oder Ihrer Firewall freigeben. Hinweis: Für Verbindungen zu Freunden wird ein anderer Port verwendet.
 Node.outBWLimit=Limit für die ausgehende Bandbreite (Bytes pro Sekunde)
 Node.outBWLimitLong=Limit für die ausgehende Bandbreite (Bytes/Sek); der Knoten sollte dies fast niemals überschreiten. Kann als Byte-Anzahl oder mit dem Suffix KiB, MiB, GiB für Kilo-/Mega-/Gigabyte angegeben werden. Sie sollten hier keinen höheren Wert angeben, als ihre Internetverbindung zur Verfügung stellt!
 Node.paddDataPackets=Von diesem Freenet-Knoten gesendete Daten-Pakete mit zufälligen Daten auffüllen? (VOR DEM AUSSCHALTEN WARNUNG LESEN!)
