--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1244,6 +1244,7 @@ QueueToadlet.compressing=Compressing
 QueueToadlet.confirmDeleteTitle=Are you sure you want to delete this file?
 QueueToadlet.confirmDelete=Do you want to delete this file from Freenet's encrypted temporary space? It may take some time to re-download it if you change your mind later.
 QueueToadlet.deleteFileFromTemp=DELETE FILE
+QueueToadlet.disableFilter=Disable content filter
 QueueToadlet.download=Download
 QueueToadlet.downloadFiles=Bulk downloads
 QueueToadlet.downloadFilesInstructions=You can paste a list of keys to download in the box below (one per line)
@@ -1299,7 +1300,7 @@ QueueToadlet.lastActivity=Last Activity
 QueueToadlet.lastActivity.unknown=unknown
 QueueToadlet.lastActivity.ago=${time} ago
 QueueToadlet.legend=Legend
-QueueToadlet.mimeProblemFetchAnyway=You can ask Freenet to fetch the file anyway by unchecking the "Filter data" checkbox and clicking on Restart.
+QueueToadlet.mimeProblemFetchAnyway=You can ask Freenet to fetch the file anyway by clicking Restart (READ THE WARNING ABOVE FIRST!).
 QueueToadlet.mimeType=Content Type
 QueueToadlet.noTaskOnGlobalQueue=There is no task queued on the global queue at the moment.
 QueueToadlet.none=none
