Tweak l10n strings, plural vs singular will be an issue in some languages

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1244,6 +1244,7 @@ QueueToadlet.compressing=Compressing
 QueueToadlet.confirmDeleteTitle=Are you sure you want to delete this file?
 QueueToadlet.confirmDelete=Do you want to delete this file from Freenet's encrypted temporary space? It may take some time to re-download it if you change your mind later.
 QueueToadlet.deleteFileFromTemp=DELETE FILE
+QueueToadlet.deleteFilesFromTemp=DELETE FILES
 QueueToadlet.disableFilter=Disable content filter
 QueueToadlet.download=Download
 QueueToadlet.downloadFiles=Bulk downloads
@@ -1338,6 +1339,7 @@ QueueToadlet.progressbarNotAccurate=This progress value is likely to change as t
 QueueToadlet.uploadProgressbarNotAccurate=This progress value is likely to change as the upload encodes more blocks
 QueueToadlet.reason=Reason
 QueueToadlet.remove=Remove from list
+QueueToadlet.removeFilesFromList=Remove files from list
 QueueToadlet.requestNavigation=Request Navigation and Totals
 QueueToadlet.restart=Restart
 QueueToadlet.returnToQueuePage=Return to ${link}queue page${/link}.
@@ -1345,6 +1347,7 @@ QueueToadlet.recommend=Recommend
 QueueToadlet.recommendAFileToFriends=Recommend a file to friends
 QueueToadlet.recommendDescription=Description of the file:
 QueueToadlet.recommendToFriends=Recommend to friends
+QueueToadlet.recommendFilesToFriends=Recommend files to friends
 QueueToadlet.siteUploadSucceededTitle=Freesite insert succeeded: ${filename}
 QueueToadlet.sitesUploadSucceededTitle=${nr} freesite inserts succeeded
 QueueToadlet.siteUploadSucceeded=Your freesite ${filename} (${files} files, ${size} total size) has been successfully uploaded to Freenet. ${link}Click here${/link} to open the site homepage.
