More verbose restart button, dependant on download vs upload

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1342,6 +1342,8 @@ QueueToadlet.remove=Remove from list
 QueueToadlet.removeFilesFromList=Remove files from list
 QueueToadlet.requestNavigation=Request Navigation and Totals
 QueueToadlet.restart=Restart
+QueueToadlet.restartDownloads=Restart downloads
+QueueToadlet.restartUploads=Restart uploads
 QueueToadlet.returnToQueuePage=Return to ${link}queue page${/link}.
 QueueToadlet.recommend=Recommend
 QueueToadlet.recommendAFileToFriends=Recommend a file to friends
