Make more verbose here too (change priorities), and put the dropdown after the button

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1233,6 +1233,8 @@ QueueToadlet.UinProgress=Uploads in progress (${size})
 QueueToadlet.compatModeLabel=Compatibility mode
 QueueToadlet.compatibilityMode=Compatibility mode
 QueueToadlet.change=Change
+QueueToadlet.changeDownloadPriorities=Change priority of downloads
+QueueToadlet.changeUploadPriorities=Change priority of uploads
 QueueToadlet.completedDU=Completed directory uploads (${size})
 QueueToadlet.completedDinDownloadDirectory=Completed downloads to download directory (${size})
 QueueToadlet.completedDinTempDirectory=Completed fetches to temporary space (${size})
