--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1222,7 +1222,7 @@ SaltedHashFreenetStore.cleanerAlertTitle=Datastore maintenance running
 QueueToadlet.awaitingCompression=Waiting
 QueueToadlet.awaitingPasswordTitleDownloads=Password required to access the download queue
 QueueToadlet.awaitingPasswordTitleUploads=Password required to access the upload queue
-QueueToadlet.badMIMETypeIntro=The following downloads are of type ${type}. Freenet does not have any built in support for making this type safe, and we know that it can contain many dangerous things that can compromise your anonymity. If you are sure you want to download these files anyway, uncheck the "Filter data" box and click Restart on each download.
+QueueToadlet.badMIMETypeIntro=The following downloads are of type ${type}. Freenet does not have any built in support for making this type safe, and we know that it can contain many dangerous things that can compromise your anonymity. If you are sure you want to download these files anyway, check the box next to each download, and click Restart.
 QueueToadlet.backToUploadsPage=Back to the uploads page
 QueueToadlet.backToDownloadsPage=Back to the downloads page
 QueueToadlet.bulkDownloadSelectOptionDisk=to disk
@@ -1303,7 +1303,7 @@ QueueToadlet.lastActivity=Last Activity
 QueueToadlet.lastActivity.unknown=unknown
 QueueToadlet.lastActivity.ago=${time} ago
 QueueToadlet.legend=Legend
-QueueToadlet.mimeProblemFetchAnyway=You can ask Freenet to fetch the file anyway by clicking Restart (READ THE WARNING ABOVE FIRST!).
+QueueToadlet.mimeProblemFetchAnyway=You can ask Freenet to fetch the files anyway by clicking Restart (READ THE WARNING ABOVE FIRST!).
 QueueToadlet.mimeType=Content Type
 QueueToadlet.noTaskOnGlobalQueue=There is no task queued on the global queue at the moment.
 QueueToadlet.none=none
