Show the total number of block sends and receives on the stats page.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1612,6 +1612,7 @@ StatisticsToadlet.resendBytes=Resent bytes: ${total}
 StatisticsToadlet.routingDisabled=Not routing traffic (we are currently connected to the node but we or it refuse to route traffic)
 StatisticsToadlet.routingDisabledShort=Not routing traffic
 StatisticsToadlet.running=Running
+StatisticsToadlet.runningBlockTransfers=Block transfers: ${sends} sends, ${receives} receives
 StatisticsToadlet.SLASHDOT=Slashdot cache
 StatisticsToadlet.statisticGatheringTitle=Statistics Gathering
 StatisticsToadlet.SSK=SSK
